# yew-demo-app

./: Cargo.toml  index.html  style.css
src/: main.rs
