[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = { version = "0.2.4", default-features = false, features = ["serde_json", "serde", "json"] }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
wasm-bindgen-futures = { version = "0.4.33", default-features = false }
yew = "0.19.3"
